--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "homepage": "https://github.com/mikuhime/izana#readme",
   "dependencies": {
+    "bunyan": "^1.5.1",
     "irc": "^0.4.0",
     "js-yaml": "^3.4.3"
   }
